tests/error/modifier_errors/power_arg_typecheck_inside.err
Error: Operator not defined (at $FILE:7:15)
  | 
5 | @guppy
6 | def test() -> None:
7 |     with power(12 + False):
  |                ^^^^^^^^^^ Binary operator `+` not defined for `int` and `bool`

Guppy compilation failed due to 1 previous error
